WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105120
[WK2 NetworkProcess] Cannot upload patches to Bugzilla
https://bugs.webkit.org/show_bug.cgi?id=105120
Summary
[WK2 NetworkProcess] Cannot upload patches to Bugzilla
Alexey Proskuryakov
Reported
2012-12-15 17:18:19 PST
ResourceRequest serialization for IPC contains body data, but not when streaming it. We need to explicitly send FormData instead. <
rdar://problem/12886312
>
Attachments
proposed fix
(8.48 KB, patch)
2012-12-15 17:26 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-12-15 17:26:09 PST
Created
attachment 179633
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-12-15 17:32:17 PST
Committed <
http://trac.webkit.org/r137825
>.
Alexey Proskuryakov
Comment 3
2012-12-15 17:53:03 PST
Build fix in
r137826
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug