        <rdar://problem/12886312> Cannot upload patches to Bugzilla (<input type=file> doesn't work)         https://bugs.webkit.org/show_bug.cgi?id=105120

Reviewed by Sam Weinig.

        Serialize HTTP body. ResourceRequest serialization cannot (and shouldn't) know about
        body streams, as used with files.

        * Shared/Network/NetworkResourceLoadParameters.cpp:
        (WebKit::NetworkResourceLoadParameters::encode):
        (WebKit::NetworkResourceLoadParameters::decode):
        * Shared/WebCoreArgumentCoders.cpp:
        (CoreIPC::::encode):



Canonical link: https://commits.webkit.org/123338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137825 268f45cc-cd09-0410-ab3c-d52691b4dbfc